--- a/public/videos.html
+++ b/public/videos.html
@@ -12,19 +12,76 @@
 			<a href="#" class='login-hide'></a>
 		</div>
 		<ul class='nav-list'>
-				
-				<li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
-				<li><a href="news.html">新闻资讯<span class='list-name'>NEWS</span></a></li>
-				<li><a href="sprite.html">妖灵图鉴<span class='list-name'>SPRITE</span></a></li>
-				<li><a href="activity.html">活动中心<span class='list-name'>ACTIVITY</span></a></li>
-				<li><a href="strategy.html">攻略中心<span class='list-name'>STRATEGY</span></a></li>
-				<li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
-		
+			<li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
+			<li><a href="news.html">新闻资讯<span class='list-name'>NEWS</span></a></li>
+			<li><a href="sprite.html">妖灵图鉴<span class='list-name'>SPRITE</span></a></li>
+			<li><a href="activity.html">活动中心<span class='list-name'>ACTIVITY</span></a></li>
+			<li><a href="strategy.html">攻略中心<span class='list-name'>STRATEGY</span></a></li>
+			<li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
+			<li><a href="videos.html">进入论坛<span class='list-name'>COMMUNITY</span></a></li>
 		</ul>
+		 <a href="#" class="h-book-btn spr text-hide">万物有灵</a>
 	</nav>
 <!-- 图片背景 -->
 	<div class="inner-kv">
 		
+	</div>
+	<!-- 内容部分 -->
+	<div class="inner-top clearfix">
+
+	</div>
+	
+	<!--底部内容  -->
+	<div class="foot-wrap">
+		<h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
+		<ul class='contact-list'>
+			<li class='contact-bbs'>
+				<a href=""><span class='spr text-hide'>官方论坛</span></a>
+			</li>
+			<li class='contact-buluo'>
+				<a href=""><span class='spr text-hide'>兴趣部落</span></a>
+			</li>
+			<li class='contact-wxyxq'>
+				<img src="img/yxqqr.jpg" alt=""><span class='spr text-hide'>微信朋友圈</span>
+			</li>
+			<li class='contact-wx'>
+				<img src="img/wxqr.jpg" alt=""><span class='spr text-hide'>微信公众号</span>
+			</li>
+		</ul>
+		<div class="foot-list">
+			<ul class="list-cont">
+				<li class="list-item">
+					<a href="#" target="_blank">腾讯互动娱乐</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">服务条款</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">腾讯游戏隐私保护指引</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">腾讯游戏招聘</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">腾讯游戏客服</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">游戏地图</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">商务合作</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">腾讯网</a>
+					<span class="f_line">|</span>
+					<a href="#" target="_blank">网站导航</a>
+				</li>
+				<li class="list-item">
+					<a target="_blank" href="#">腾讯公司版权所有</a>
+				</li>
+				<li class="list-item">
+					<a target="_blank" href="#">COPYRIGHT © 1998 - 2019 TENCENT. ALL RIGHTS RESERVED.</a>
+				</li>
+				<li class="list-item">
+					<a target="_blank" href="#">粤网文[2017]6138-1456号|（总）网出证（粤）字第057号</a>
+				</li>
+
+			</ul>
+			<p class="foot-h">仿：H-15159883705</p>
+		</div>
 	</div>
 </body>
 </html>
