--- a/public/videos.html
+++ b/public/videos.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/com.css">
+	<link rel="stylesheet" href="css/videos.css">
 </head>
 <body>
 	<!-- 导航栏  -->
@@ -28,7 +29,49 @@
 	</div>
 	<!-- 内容部分 -->
 	<div class="inner-top clearfix">
-
+		<h2 class="inner-title d-spr text-hide">精彩视频</h2>
+	</div>
+	<div class="inner-con">
+		<ol class="hot-video">
+			<li class="video-item">
+				<img src="img/photo/35.jpg" alt="">
+				<a href="#"	 class="play-mask"></a>
+				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+			</li>
+			<li class="video-item">
+				<img src="img/photo/35.jpg" alt="">
+				<a href="#"	 class="play-mask"></a>
+				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+			</li>
+			<li class="video-item">
+				<img src="img/photo/35.jpg" alt="">
+				<a href="#"	 class="play-mask"></a>
+				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+			</li>
+			<li class="video-item">
+				<img src="img/photo/35.jpg" alt="">
+				<a href="#"	 class="play-mask"></a>
+				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+			</li>
+		</ol>
+		<div class="con-tab">
+			<a href="#" class="tab-prev spr text-hide">上一个</a>
+			<ul class="tab-hd">
+				<li class="tab-item on">
+					<a href="#" class="d-spr text-hide f-l-4 t-zxsp"></a>
+				</li>
+				<li class="tab-item ">
+					<a href="#" class="d-spr text-hide f-l-4 t-gfsp"></a>
+				</li>
+				<li class="tab-item ">
+					<a href="#" class="d-spr text-hide f-l-4 t-gxsp"></a>
+				</li>
+				<li class="tab-item ">
+					<a href="#" class="d-spr text-hide f-l-4 t-jczb"></a>
+				</li>
+			</ul>
+			<a href="#" class="tab-next spr text-hide">下一个</a>
+		</div>
 	</div>
 	
 	<!--底部内容  -->
