--- a/public/videos.html
+++ b/public/videos.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/com.css">
 	<link rel="stylesheet" href="css/videos.css">
 </head>
+
 <body>
 	<!-- 导航栏  -->
 	<nav>
@@ -21,11 +23,11 @@
 			<li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
 			<li><a href="videos.html">进入论坛<span class='list-name'>COMMUNITY</span></a></li>
 		</ul>
-		 <a href="#" class="h-book-btn spr text-hide">万物有灵</a>
+		<a href="#" class="h-book-btn spr text-hide">万物有灵</a>
 	</nav>
-<!-- 图片背景 -->
+	<!-- 图片背景 -->
 	<div class="inner-kv">
-		
+
 	</div>
 	<!-- 内容部分 -->
 	<div class="inner-top clearfix">
@@ -35,22 +37,22 @@
 		<ol class="hot-video">
 			<li class="video-item">
 				<img src="img/photo/35.jpg" alt="">
-				<a href="#"	 class="play-mask"></a>
+				<a href="#" class="play-mask"></a>
 				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
 			</li>
 			<li class="video-item">
 				<img src="img/photo/35.jpg" alt="">
-				<a href="#"	 class="play-mask"></a>
+				<a href="#" class="play-mask"></a>
 				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
 			</li>
 			<li class="video-item">
 				<img src="img/photo/35.jpg" alt="">
-				<a href="#"	 class="play-mask"></a>
+				<a href="#" class="play-mask"></a>
 				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
 			</li>
 			<li class="video-item">
 				<img src="img/photo/35.jpg" alt="">
-				<a href="#"	 class="play-mask"></a>
+				<a href="#" class="play-mask"></a>
 				<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
 			</li>
 		</ol>
@@ -72,8 +74,63 @@
 			</ul>
 			<a href="#" class="tab-next spr text-hide">下一个</a>
 		</div>
+		<!-- 浮动图片 -->
+		<div class="grid-tab-bd">
+			<ul class="col-video clearfix">
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+				<li class="video-item">
+					<img src="img/photo/35.jpg" alt="">
+					<a target="_blank" href="#" class="play-mask"></a>
+					<span class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</span>
+				</li>
+			</ul>
+			<!-- 分页条 -->
+			<div class="list-pagintion">
+				<a href="#">上一页</a>
+				<a href="#">下一页</a>
+			</div>
+		</div>
 	</div>
-	
+
 	<!--底部内容  -->
 	<div class="foot-wrap">
 		<h3 class='foot-tit spr text-hide'>更多精彩请关注我们</h3>
@@ -127,4 +184,5 @@
 		</div>
 	</div>
 </body>
+
 </html>
