--- a/public/videos.html
+++ b/public/videos.html
@@ -27,7 +27,7 @@
     </nav>
     <!-- 图片背景 -->
     <div class="inner-kv">
-   先提交还是先pull
+   嘻嘻嘻
     </div>
     <!-- 内容部分 -->
     <div class="inner-top clearfix">
