--- a/public/index.html
+++ b/public/index.html
@@ -157,7 +157,7 @@
                 <div class="video-tab">
                     <a href="javascript:void(0)" class="tab-prev prev spr text-hide">上一个</a>
                     <ul class="tab-hd">
-                        <li class="tab-item">
+                        <li class="tab-item on">
                             <a href="#" class="spr text-hide zxsp">最新视频</a>
                         </li>
                         <li class="tab-item">
@@ -200,6 +200,33 @@
                             <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
                         </li>
                     </ul>
+                    <ul class="video-list">
+                        <li class="video-0 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-1 ">
+                            <img src="img/photo/vedio-2.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-2 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-3 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-4 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                    </ul>
                     <a href="#" class="video-more-btn">查看更多</a>
                 </div>
             </div>
@@ -209,26 +236,92 @@
         <div class="part4">
             <h2 class='p4-tit spr text-hide'>攻略中心</h2>
             <ul class='strategy-wrap clearfix'>
-                <li class='clearfix on'>
-                    <a href="" class='strategy-tit strategy-tit-1 s-spr text-hide'>官方指引</a>
+                <li class='clearfix'>
+                    <a href="javascript:;" class='strategy-tit strategy-tit-1 s-spr text-hide'>官方指引</a>
                     <div class="strategy-con">
                         <!--轮播图 后面添加 -->
                         <div class='strategy-swiper'></div>
                         <ul class='col-news'>
                             <li>
                                 <span class='time'>04-25</span>
-                                <a href=""><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
                             </li>
                             <li>
                                 <span class='time'>04-25</span>
-                                <a href=""><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
                             </li>
                             <li>
                                 <span class='time'>04-25</span>
-                                <a href=""><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
                             </li>
                         </ul>
-                        <a href="#" class="strategy-more-btn">查看更多</a>
+                        <a href="javascript:;" class="strategy-more-btn">查看更多</a>
+                    </div>
+                </li>
+                <li class='clearfix on'>
+                    <a href="javascript:;" class='strategy-tit strategy-tit-2 s-spr text-hide'>新手指南</a>
+                    <div class="strategy-con">
+                        <!--轮播图 后面添加 -->
+                        <div class='strategy-swiper'></div>
+                        <ul class='col-news'>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                        </ul>
+                        <a href="javascript:;" class="strategy-more-btn">查看更多</a>
+                    </div>
+                </li>
+                <li class='clearfix'>
+                    <a href="javascript:;" class='strategy-tit strategy-tit-3 s-spr text-hide'>新手指南</a>
+                    <div class="strategy-con">
+                        <!--轮播图 后面添加 -->
+                        <div class='strategy-swiper'></div>
+                        <ul class='col-news'>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                        </ul>
+                        <a href="javascript:;" class="strategy-more-btn">查看更多</a>
+                    </div>
+                </li>
+                <li class='clearfix'>
+                    <a href="javascript:;" class='strategy-tit strategy-tit-4 s-spr text-hide'>新手指南</a>
+                    <div class="strategy-con">
+                        <!--轮播图 后面添加 -->
+                        <div class='strategy-swiper'></div>
+                        <ul class='col-news'>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                            <li>
+                                <span class='time'>04-25</span>
+                                <a href="javascript:;"><span>[官方指引]</span>玩法爆料|御灵团战规则介绍</a>
+                            </li>
+                        </ul>
+                        <a href="javascript:;" class="strategy-more-btn">查看更多</a>
                     </div>
                 </li>
             </ul>
@@ -308,7 +401,9 @@
             <p class="foot-h">仿：H-15159883705</p>
         </div>
     </div>
+    <script src="js/jquery-1.11.3.js"></script>
     <script src="js/swiper.min.js"></script>
+    <script src="js/index.js"></script>
     <script>
         window.onload = function() {
             var mySwiper = new Swiper('.kv-swiper', {
