--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
     <div class="kv-swiper  swiper-container">
         <div class="swiper-wrapper">
-            <div class="swiper-slide swiper-slide-active">
+            <div class="swiper-slide swiper-slide-active" >
                 <img src="img/kv1.jpg" alt="">
             </div>
             <div class="swiper-slide">
@@ -58,34 +58,64 @@
             </div>
             <div class="mt-center">
                 <div class="adPic">
-                    <a href="#" target="_blank">
+                    <a href="#" target="_blank" >
                         <img src="img/photo/ad-1.jpeg" alt="" />
                     </a>
                     <a href="#" target="_blank">
+                        <img src="img/photo/ad-2.jpeg" alt="" />
+                    </a>
+                    <a href="#" target="_blank">
+                        <img src="img/photo/ad-3.jpeg" alt="" />
+                    </a>
+                    <a href="#" target="_blank" >
                         <img src="img/photo/ad-1.jpeg" alt="" />
                     </a>
-
                 </div>
                 <div class="adBtn">
                     <a href="javascript:void(0)" class="on">旬空一刻，亮采其华——全新亮采版本精彩上线</a>
                     <a href="javascript:void(0)">韶阳雪止，万物之生——五星神灵句芒现世</a>
+                    <a href="javascript:void(0)">asdasdasdsd</a>
                 </div>
             </div>
             <div class='mt-right'>
                 <ul class='tab-hd '>
-                    <li><a href="#">最新</a></li>
-                    <li><a href="#">新闻</a></li>
-                    <li><a href="#">公告</a></li>
-                    <li><a href="#">活动</a></li>
+                    <li class="on"><a href="javascript:;">最新</a></li>
+                    <li><a href="javascript:;">新闻</a></li>
+                    <li><a href="javascript:;">公告</a></li>
+                    <li><a href="javascript:;">活动</a></li>
                 </ul>
-                <div class='tab-bd'>
-                    <ul class='col-news'>
-                        <li><span class='time'>04-26</span><a href="#"><span>[活动]</span>火爆捉妖，全城辣来袭</a>
+                <div class='grid-tab-bd' >
+                    <ul class='col-news dis' data-val="最新">
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[新闻资讯]</span>火爆捉妖，全城辣来袭</a>
                         </li>
-                        <li><span class='time'>04-26</span><a href="#"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
-                        <li><span class='time'>04-26</span><a href="#"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
-                        <li><span class='time'>04-26</span><a href="#"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
-                        <li><span class='time'>04-26</span><a href="#"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                    </ul>
+                    <ul class='col-news' data-val="新闻">
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[新闻]</span>火爆捉妖，全城辣来袭</a>
+                        </li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                    </ul>
+                    <ul class='col-news' data-val="公告">
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[公告]</span>火爆捉妖，全城辣来袭</a>
+                        </li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                    </ul>
+                    <ul class='col-news' data-val="活动">
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a>
+                        </li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
+                        <li><span class='time'>04-26</span><a href="javascript:;"><span>[活动]</span>火爆捉妖，全城辣来袭</a></li>
                     </ul>
                 </div>
             </div>
@@ -177,7 +207,7 @@
                         <li class="video-0 ">
                             <img src="img/photo/vedio-1.jpg" alt="" />
                             <a class="play-mask" href="#"></a>
-                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                            <p class="video-tit">【御灵宝典】1擂台战打法技巧擂台战怎么打</p>
                         </li>
                         <li class="video-1 ">
                             <img src="img/photo/vedio-2.png" alt="" />
@@ -204,7 +234,61 @@
                         <li class="video-0 ">
                             <img src="img/photo/vedio-1.jpg" alt="" />
                             <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】2擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-1 ">
+                            <img src="img/photo/vedio-2.png" alt="" />
+                            <a class="play-mask" href="#"></a>
                             <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-2 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-3 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-4 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                    </ul>
+                    <ul class="video-list">
+                        <li class="video-0 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】3擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-1 ">
+                            <img src="img/photo/vedio-2.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-2 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-3 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                        <li class="video-4 ">
+                            <img src="img/photo/vedio-3.png" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】擂台战打法技巧擂台战怎么打</p>
+                        </li>
+                    </ul>
+                    <ul class="video-list">
+                        <li class="video-0 ">
+                            <img src="img/photo/vedio-1.jpg" alt="" />
+                            <a class="play-mask" href="#"></a>
+                            <p class="video-tit">【御灵宝典】4擂台战打法技巧擂台战怎么打</p>
                         </li>
                         <li class="video-1 ">
                             <img src="img/photo/vedio-2.png" alt="" />
