攻略点击轮播

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <!-- 导航栏  -->
     <nav>
         <div class='nav-logo'>
-            <a href="#" class='login-hide'></a>
+            <a href="javascript:;" class='login-hide'></a>
         </div>
         <ul class='nav-list'>
             <li><a href="index.html">官方首页<span class='list-name'>HOME</span></a></li>
@@ -26,22 +26,25 @@
             <li><a href="activity.html">活动中心<span class='list-name'>ACTIVITY</span></a></li>
             <li><a href="strategy.html">攻略中心<span class='list-name'>STRATEGY</span></a></li>
             <li><a href="videos.html">精彩视频<span class='list-name'>VIDEOS</span></a></li>
-            <li><a href="https://bbs.zhuoyao.qq.com/forum.php?mod=forumdisplay&fid=61" target="_blank">进入论坛<span class='list-name'>COMMUNITY</span></a></li>
+            <li><a href="https://bbs.zhuoyao.qq.com/forum.php?mod=forumdisplay&fid=61" target="_blank">进入论坛<span
+                        class='list-name'>COMMUNITY</span></a></li>
         </ul>
-        <a href="javascript:void()" class="h-book-btn spr text-hide">万物有灵</a>
+        <a href="javascript:;" class="h-book-btn spr text-hide">万物有灵</a>
     </nav>
     <!-- 轮播图 -->
-
-    <div class="kv-swiper  swiper-container">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide swiper-slide-active" >
-                <img src="img/kv1.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="img/kv2.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="img/kv1.jpg" alt="">
+    <div class="kv-wrap">
+        <div class="kv-swiper  swiper-container">
+               
+            <div class="swiper-wrapper">
+                <div class="swiper-slide swiper-slide-active">
+                    <img src="img/kv1.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/kv2.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="img/kv1.jpg" alt="">
+                </div>
             </div>
         </div>
     </div>
@@ -53,28 +56,28 @@
                     <img src="img/dl-qrcode.jpg" alt="">
                 </div>
                 <p class='mt-qr-text'>扫一扫下载游戏</p>
-                <a class="mt-app-btn text-hide spr " href="#">App Store下载</a>
-                <a class="mt-apk-btn text-hide spr " href="#">apk 下载</a>
+                <a class="mt-app-btn text-hide spr " href="javascript:;">App Store下载</a>
+                <a class="mt-apk-btn text-hide spr " href="javascript:;">apk 下载</a>
             </div>
             <div class="mt-center">
                 <div class="adPic">
-                    <a href="#" target="_blank" >
+                    <a href="javascript:;" target="_blank">
                         <img src="img/photo/ad-1.jpeg" alt="" />
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="javascript:;" target="_blank">
                         <img src="img/photo/ad-2.jpeg" alt="" />
                     </a>
-                    <a href="#" target="_blank">
+                    <a href="javascript:;" target="_blank">
                         <img src="img/photo/ad-3.jpeg" alt="" />
                     </a>
-                    <a href="#" target="_blank" >
+                    <a href="javascript:;" target="_blank">
                         <img src="img/photo/ad-1.jpeg" alt="" />
                     </a>
                 </div>
                 <div class="adBtn">
-                    <a href="javascript:void(0)" class="on">旬空一刻，亮采其华——全新亮采版本精彩上线</a>
-                    <a href="javascript:void(0)">韶阳雪止，万物之生——五星神灵句芒现世</a>
-                    <a href="javascript:void(0)">asdasdasdsd</a>
+                    <a href="javascript:;" class="on">旬空一刻，亮采其华——全新亮采版本精彩上线</a>
+                    <a href="javascript:;">韶阳雪止，万物之生——五星神灵句芒现世</a>
+                    <a href="javascript:;">asdasdasdsd</a>
                 </div>
             </div>
             <div class='mt-right'>
@@ -84,7 +87,7 @@
                     <li><a href="javascript:;">公告</a></li>
                     <li><a href="javascript:;">活动</a></li>
                 </ul>
-                <div class='grid-tab-bd' >
+                <div class='grid-tab-bd'>
                     <ul class='col-news dis' data-val="最新">
                         <li><span class='time'>04-26</span><a href="javascript:;"><span>[新闻资讯]</span>火爆捉妖，全城辣来袭</a>
                         </li>
@@ -125,7 +128,8 @@
             <p class='fairy-name'>小狐狸</p>
             <p class="story-tit spr">story</p>
             <p class='fairy-story'>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus tenetur quibusdam eaque beatae quas expedita rerum laborum quo ex fuga.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus tenetur quibusdam eaque beatae quas
+                expedita rerum laborum quo ex fuga.
             </p>
             <a href="#" class='fairy-more-btn spr'>查看更多</a>
             <img class='fairy-img' src="img/038e48c9109d009b42e3d3cd1561382c.png" alt="">
@@ -320,11 +324,31 @@
         <div class="part4">
             <h2 class='p4-tit spr text-hide'>攻略中心</h2>
             <ul class='strategy-wrap clearfix'>
-                <li class='clearfix'>
+                <li class='clearfix on'>
                     <a href="javascript:;" class='strategy-tit strategy-tit-1 s-spr text-hide'>官方指引</a>
                     <div class="strategy-con">
                         <!--轮播图 后面添加 -->
-                        <div class='strategy-swiper'></div>
+                        <div class='strategy-swiper'>
+                            <ul class="swiper-all clearfix">
+                                <li class="swiper-item">
+                                    <img src="img/photo/1.jpg" alt="">
+                                    <p>【捉妖图鉴】进阶玩法：世界BOSS朱雀来袭，T1阵容打法推</p>
+                                </li>
+                                <li class="swiper-item">
+                                        <img src="img/photo/2.jpg" alt="">
+                                        <p>【妖灵日记】夏天真的好热哦</p>
+                                </li>
+                                <li class="swiper-item">
+                                        <img src="img/photo/3.jpg" alt="">
+                                        <p>【妖灵日记】夏天真的好热哦</p>
+                                </li>
+                            </ul>
+                            <div class="strategy-pagination">
+                                    <span class="swiper-pagination-switch swiper-active-switch"></span>
+                                    <span class="swiper-pagination-switch "></span>
+                                    <span class="swiper-pagination-switch "></span>
+                            </div>
+                        </div>
                         <ul class='col-news'>
                             <li>
                                 <span class='time'>04-25</span>
@@ -342,7 +366,7 @@
                         <a href="javascript:;" class="strategy-more-btn">查看更多</a>
                     </div>
                 </li>
-                <li class='clearfix on'>
+                <li class='clearfix '>
                     <a href="javascript:;" class='strategy-tit strategy-tit-2 s-spr text-hide'>新手指南</a>
                     <div class="strategy-con">
                         <!--轮播图 后面添加 -->
@@ -489,7 +513,7 @@
     <script src="js/swiper.min.js"></script>
     <script src="js/index.js"></script>
     <script>
-        window.onload = function() {
+        window.onload = function () {
             var mySwiper = new Swiper('.kv-swiper', {
                 autoplay: {
                     delay: 1000
